# kijito-claude

./: .gitignore  CLAUDE.md.snippet  LICENSE  NOTICE  README.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-npm.yml  publish-pypi.yml
scripts/: arm-session.sh  claude-armed.sh  kijito-qa-pass.sh  lifecycle-lib.sh  myctx.sh  self-clear.sh  session-autosend.sh  session-catchup-hint.sh  statusline-context.sh
skills/kijito-qa-memory/: SKILL.md
skills/kijito-start/: SKILL.md
src/kijito_claude/: __init__.py  cli.py
tests/: lc_test.sh  test-autosend.sh
